changes in html file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FCC: Personal Portfolio</title>
+	<title>Javascript projects</title>
 	<link rel="stylesheet" type="text/css" href="portpolio.css">
 	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	
@@ -128,7 +128,7 @@
 
 		
 
-		<p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+		<p>**This is just a personal portfolio. All the projects and contact details given are real.</p>
 		
 		<p>© Created for <a href="https://www.freecodecamp.com/">freeCodeCamp <i class="fa fa-free-code-camp"></i></a></p>
 		
