changes in project section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<section id="projects" class="projects-section">
 
-		<h2 class="projects-section-header">These are some of my projects</h2>
+		<h2 class="projects-section-header">These are some of my Projects.The links are below</h2>
 		<div class="projects-grid">
 		
 		<a href="https://background-hex-code.netlify.app/" target="blank" class="project project-tile">
